# ros-helix

./: .gitignore  .gitmodules  Dockerfile  README.md  README_0_startup_and_calibration.md  README_1_cartesian_control.md  README_2_external_interfaces.md  Topics_and_Services.md  Userguide_0_Configuration.md  Userguide_1_Calibration_And_Basic_Control.md  Userguide_2_Cartesian_Control.md  Userguide_3_External_Interfaces.md  build.sh  docker-compose.yml  helix_ros2_diagram.drawio  ros_entrypoint.sh  run.sh
.github/workflows/: ci.yml
helix_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
helix_bringup/config/: params.yaml
helix_bringup/launch/: helix_bringup.launch.py
helix_description/: CMakeLists.txt  package.xml
helix_description/config/: controllers.yaml  helix.rviz
helix_description/controllers/: controllers.yaml
helix_description/meshes/: Index_2dof_joint_1.stl  Index_Base_1.stl  Index_Distal_1.stl  Index_Finger_base_1.stl  Index_Middle_1.stl  Index_Proximal_1.stl  Middle_2dof_joint_1.stl  Middle_Base_1.stl  Middle_Distal_1.stl  Middle_Finger_base_1.stl  Ring_Base_1.stl  (+31 more)
helix_gripper/: package.xml  setup.cfg  setup.py
helix_transmission/: package.xml  setup.cfg  setup.py
helix_transmission/config/: helix_transmission.config.yml  tendon_calib.yml
helix_transmission/helix_transmission/: tendon_transmission.py
helix_transmission_interfaces/: CMakeLists.txt  package.xml
helix_transmission_interfaces/srv/: GoToGripperPose.srv  GoToGripperPoseEuler.srv  GoToGripperPoseQuat.srv  GoToGripperPoseVector.srv  SetCurrent.srv  SetHoldingCurrent.srv
(+12 files in other folders)
