<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>helix_transmission</name>
  <version>0.0.0</version>
  <description>Transmission providing abstraction between Helix motors and tendons</description>
  <maintainer email="sebtiburzio@gmail.com">sebtiburzio</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>yaml</exec_depend>    
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>helix_transmission_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
